--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Diario Visual - Tu feed personal de fotos y videos organizados por fecha">
+    <meta name="theme-color" content="#3b82f6">
+
     <title>Feed de Fotos - Diario Visual</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <!-- Estilos -->
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/components.css">
+
+    <!-- Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📸</text></svg>">
+
+    <!-- Preload de archivos críticos -->
+    <link rel="preload" href="assets/js/common.js" as="script">
+    <link rel="preload" href="assets/js/feed.js" as="script">
 </head>
 <body>
     <!-- Navigation Header -->
@@ -149,6 +161,20 @@
         </div>
     </div>
 
-    <script src="feed.js"></script>
+    <!-- Scripts -->
+    <script src="assets/js/common.js"></script>
+    <script src="assets/js/components/lightbox.js"></script>
+    <script src="assets/js/components/slideshow.js"></script>
+    <script src="assets/js/feed.js"></script>
+
+    <!-- PWA Support (futuro) -->
+    <script>
+        // Service Worker registration para funcionalidad offline futura
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                // navigator.serviceWorker.register('/sw.js'); // Futuro
+            });
+        }
+    </script>
 </body>
 </html>
