--- a/shared/web/public/index.html
+++ b/shared/web/public/index.html
@@ -205,6 +205,7 @@
     <script src="assets/js/common.js"></script>
     <script src="assets/js/components/lightbox.js"></script>
     <script src="assets/js/components/slideshow.js"></script>
+    <script src="assets/js/components/comments.js"></script>
     <script src="assets/js/feed.js"></script>
 
     <!-- PWA Support (futuro) -->
