--- a/shared/web/public/index.html
+++ b/shared/web/public/index.html
@@ -169,12 +169,14 @@
         <div class="modal comment-modal">
             <div class="modal-header">
                 <h3>💬 Comentario del día</h3>
-                <button onclick="photoFeed.hideCommentModal()" class="modal-close">×</button>
+                <button onclick="commentsManager.closeModal()" class="modal-close">×</button>
             </div>
             <div class="modal-content">
                 <div class="comment-date-info">
                     <span id="comment-date" class="comment-date"></span>
                 </div>
+                <!-- Vista de comentario tipo tarjeta -->
+                <div id="comment-view" class="comment-view-card" style="display: none;"></div>
                 <div class="comment-input-wrapper">
                     <textarea id="comment-text" class="comment-textarea"
                         placeholder="Escribe tus pensamientos sobre este día..." maxlength="5000"></textarea>
@@ -191,9 +193,10 @@
                 <button id="delete-comment-btn" class="btn btn-error" style="display: none;">
                     🗑️ Eliminar
                 </button>
-                <button onclick="photoFeed.hideCommentModal()" class="btn btn-secondary">
+                <button onclick="commentsManager.closeModal()" class="btn btn-secondary">
                     Cancelar
                 </button>
+                <button id="edit-comment-btn" class="btn btn-primary" style="display: none; margin-bottom: 1rem;">✏️ Editar</button>
                 <button id="save-comment-btn" class="btn btn-primary">
                     💾 Guardar
                 </button>
